final adjustments database and code
