# routes/api.php
@@ -8,8 +8,8 @@ use App\Http\Controllers\ItemController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-Route::post('login', [AuthController::class, 'login']);
-Route::delete('logout', [AuthController::class, 'logout'])->middleware('auth:sanctum',);
+Route::post('Authentication/login', [AuthController::class, 'login']);
+Route::delete('Authentication/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum',);
 
-Route::apiResource('users', UserController::class)->middleware('auth:sanctum');
-Route::apiResource('insureds', InsuredController::class)->middleware('auth:sanctum');
+Route::apiResource('User', UserController::class)->middleware('auth:sanctum');
+Route::apiResource('Insured', InsuredController::class)->middleware('auth:sanctum');
